--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,10 +1,10 @@
 name: CI/CD Pipeline
 
- on:
+   on:
     push:
       branches:
            -master
-      pull-request:
+      pull_request:
        branches:
          -master
 
