--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,24 +1,27 @@
 name: CI/CD Pipeline
-
 on:
-    push:
-      branches:
-           -master
-      pull_request:
-       branches:
-         -master
+  push:
+    branches
+      - master
+  pull_request:
+    branches:
+    - master
 
-     jobs:
-       build:
-       runs-on:ubuntu-latest
-       steps:
+    jobs:
+      build:
+      runs-on: ubuntu-latest
+      steps:
        -name: Checkout repository
-         uses: actions/checkout@v3
+        uses: actions/checkout@v3
+        
 
-         -name: Install dependencies
-           run: npm install
+          - name: Install dependencies
+            run: npm install
 
-           -name: Run tests
-             run: npm test
+          - name: Run tests
+            run: npm
+
+   
+    
 
      
